# fastapi-auth-sync

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  start_debug_server.py
.github/workflows/: code-quality-checks.yml  code-security-checks.yml
alembic/: env.py
alembic/versions/: 5f69a26c4380_create_a_new_postgresql_database.py
api/: config.py  main.py  start_debug_server.py
api/apps/auth/: authenticate.py  tokens.py
api/apps/users/: db_ops.py  models.py
api/loggers/: __init__.py
docker/db/: docker-compose.yml
docker/db-test/: docker-compose.yml
docker/local/: Dockerfile  docker-compose.yml  entrypoint.sh
tests/: conftest.py  test_fail.py
tests/integration/test_routes/: test_auth_routes.py  test_user_routes.py  test_welcome.py
tests/test_routes/: test_auth_routes.py  test_health.py  test_user_routes.py  test_welcome.py
tests/unit/test_apps_auth/: test_passwords.py
